# piepy

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  boninbehavior-bc4a8812a6f9.json  config.json  environment.yml  mkdocs.yaml  my_pip.txt  pyproject.toml  requirements.txt  setup.py
Dylan_test/: stim_time_to_2p_matching.py
behavior_python/: fit_funcs.py  gsheet_functions.py  statistics.py  utils.py  wheelTrace.py  wheelUtils.py
behavior_python/analysis_notebooks/: outcome_scatter_comparison.ipynb  pca_trial_outcome.ipynb  python_loop_time.ipynb
behavior_python/core/: behavior.py  config.py  core.py  dbinterface.py  exceptions.py  experimenter.py  logger.py  mouse.py  pathfinder.py  run.py  session.py  session_launcher.py  trial.py
behavior_python/detection/: wheelDetectionAnalysis.py  wheelDetectionBehavior.py  wheelDetectionSession.py  wheelDetectionSilencing.py  wheelDetectionTrial.py
behavior_python/example_notebooks/: example_detectionSession_analysis.ipynb  example_onep_analysis.ipynb  example_trial_plot.ipynb  example_visualSession_analysis.ipynb
behavior_python/model/: glmModel.py  lapseModel.py  transformer.py
behavior_python/onep/: cameraAnalysis.py  eyecamAnalysis.py  facecamAnalysis.py  filters.py  myio.py  onepAnalysis.py  onepSession.py  onepTrial.py  retinoutils.py  stacks.py
behavior_python/plotters/: basePlotters.py  behaviorBasePlotters.py  colorkey.json  miceLifePlotter.py  plotter_utils.py
behavior_python/scripts/: dailySummary.py  plot_timing_differences.py  weeklySummary.py
behavior_python/visual/: visualSession.py  visualTrial.py
behavior_python/wheel/: wheelAnalysis.py  wheelBehavior.py  wheelSession.py  wheelTrial.py  wheelUtils.py
bonin_wheel.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
datajoint_pipeline/: dataJoint_startup.py
datajoint_pipeline/helpers/: nerfcluster_jobs.py
datajoint_pipeline/intermediaries/: run_fissa_correction.py  run_suite2p_gui.py
datajoint_pipeline/scratchpad/: basic_response_plotting.py  decoding_outcome.py  manual_data_add_test.py  neuron_limited_outcome_decoding.py  twop_processing_utils.py
datajoint_pipeline/tables/: main_tables.py  preprocessing_tables.py
docs/javascripts/: readthedocs.js
notebooks/: example_detectionSession_analysis.ipynb  example_discriminationSession_analysis.ipynb  example_mouse_hub_analysis.ipynb  example_onep_analysis.ipynb  example_passiveSession_analysis.ipynb  example_trial_plot.ipynb
piepy/: gsheet_functions.py  utils.py
piepy/core/: config.py  data_functions.py  dbinterface.py  exceptions.py  experimenter.py  gsheet_functions.py  hub.py  io.py  log_repair_functions.py  logger.py  mouse.py  mouse_old.py  parsers.py  pathfinder.py  run.py  session.py  session_launcher.py  statistics.py  trial.py  utils.py
piepy/detection/: wheelDetectionAnalysis.py  wheelDetectionSession.py  wheelDetectionTrial.py
piepy/example_notebooks/: example_detectionSession_analysis.ipynb  example_mouse_analysis.ipynb  example_onep_analysis.ipynb  example_passiveSession_analysis.ipynb  example_visualSession_analysis.ipynb
piepy/imaging/: scripts.py
piepy/model/: glmModel.py  transformer.py
piepy/models/: lapseModel.py  transformer.py
source/: conf.py  index.rst
(+148 files in other folders)
