[build-system]

requires = ["setuptools == 68.2.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["piepy"]

[project]
name = "piepy"
version = "1.0"
description = "Code for Behavioral, Imaging Analysis"
readme = "README.md"
dynamic = ["dependencies"]
requires-python = ">=3.10"
#license = "GPL"
#keywords = ["psychophysics", "imaging", "analysis"]

authors = [
  {name = "Sakir Kaan Cetindag", email = "cetindag.kaan@gmail.com" }
]

# Classifiers help users find your project by categorizing it.
#
# For a list of valid classifiers, see https://pypi.org/classifiers/
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",

  # Specify the Python versions you support here. In particular, ensure
  # that you indicate you support Python 3. These classifiers are *not*
  # checked by "pip install". See instead "requires-python" key in this file.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]

[tool.setuptools.dynamic]
dependencies = { file = ['requirements.txt'] }

[project.scripts]
parsemouse = "piepy.core.mouse:main"
session = "piepy.core.session_launcher:main"
dashboard = "piepy.plotters.bokeh_plot.launcher:main"
