[project]
name = "piepy-neuro"
version = "0.1.0"
description = "Code for Behavioral, Imaging Analysis"
authors = [{name = "Sakir Kaan Cetindag", email = "cetindag.kaan@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["neuroscience","psychophysics", "imaging", "analysis"]

classifiers = [
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering",
  "Intended Audience :: Science/Research",
  "Typing :: Typed",
]

dependencies = [
    "numpy == 1.24.0",
    "matplotlib == 3.9.0",
    "patito ~= 0.8.3",
    "polars ~= 1.19.0",
    "pyarrow == 13.0.0",
    "tqdm == 4.65.1",
    "bokeh",
    "scipy",
    "pandas",
    "colorama",
    "pillow",
    "opencv-python",
    "google-api-python-client",
    "google-auth-oauthlib",
    "oauth2client",
    "google-auth",
    "gspread",
    "ipykernel",
    "pystackreg",
    "tabulate",
    "tifffile",
    "natsort",
    "scikit-learn",
    "scikit-image",
]

[project.optional-dependencies]
dev = ["pre-commit", "jupyter"]


[project.scripts]
parsemouse = "piepy.core.mouse:main"
session = "piepy.core.session_launcher:main"
dashboard = "piepy.plotters.bokeh_plot.launcher:main"

[project.urls]
Homepage = "https://github.com/kaancet/piepy"

[build-system]
requires = ["setuptools >= 68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["piepy*"]
exclude = ["notebooks*", "res*", "build*", "*.egg-info*"]